	  Fixes RT#126028. Thanks to Jitka Plesnikova.
	- Added SSL_in_init() and the related functions for all
	  libraries and their versions. All return 0 or 1 as
	  documented by OpenSSL 1.1.1. Use of these functions is
	  recommended over using constants returned by get_state() and
	  state(). New constants TLS_ST_*, used by OpenSSL 1.1.0 and
	  later, will not be made available by Net::SSLeay.

1.86_04 2018-07-30
	- Re-add SSLv3_method() for OpenSSL 1.0.2 and above. Fixes
	  RT#101484.
	- Don't expose ENGINE-related functions when building against
	  OpenSSL builds without ENGINE support. Fixes RT#121538. Thanks to
	  Paul Green.
	- Automatically detect OpenSSL 1.0.x on VMS, and update VMS
	  installation instructions to reflect removal of Module::Install
	  from the build system. Fixes RT#124388. Thanks to Craig A. Berry.
	- Prevent memory leak in OCSP_cert2ids() and OCSP_response_verify().
	  Fixes RT#125273. Thanks to Steffen Ullrich.

1.86_03 2018-07-19
	- Convert packaging to ExtUtils::MakeMaker
	- Module::Install is no longer a prerequisite when building
	  from the reposistory.
	- Re-apply patch from ETJ permitting configure and build in
	  places with a space in the name.

1.86_02 2018-07-06
	- Removed inc/ from repository. Module::Install is now a
	  prerequisite when building from the repository. This allowed
	  also removing "." from Makefile.PL lib path which was added
	  in version 1.81. These updates require no changes when
	  building from release packages. They also help AppVeyor
	  builds to work better with old Perls.

	- Added CONTRIBUTING.md, reformatted the previous Changes
          entry to use CPAN::Changes::Spec guidelines and removed
          unused version control tags from comments.

1.86_01 2018-07-04
	[Version control system change]
	- Chris Novakovic did a full conversion from the old Debian
	  hosted SVN repository to git.

	- Fixes to commit metadata, branches and tags that git-svn