@@ -24,6 +24,8 @@ Revision history for Perl extension Net::SSLeay.
 	  recommended over using constants returned by get_state() and
 	  state(). New constants TLS_ST_*, used by OpenSSL 1.1.0 and
 	  later, will not be made available by Net::SSLeay.
+	- Enhance t/local/43_misc_functions.t get_keyblock_size test
+	  to work better with AEAD ciphers.
 
 1.86_04 2018-07-30
 	- Re-add SSLv3_method() for OpenSSL 1.0.2 and above. Fixes
